--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+button {
+    margin: 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    font-size: 1em;
+}
+
+.button:hover {
+    background-color: gray; /* Green */
+}
+
+.button:active {
+    background-color: steelblue;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
