--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ button {
 }
 
 .button:hover {
-    background-color: gray; /* Green */
+    background-color: steelblue; /* Green */
 }
 
 .button:active {
